Add logic for get all possible routes endpoint
