# src/main/java/com/itechart/citydistance/service/RouteService.java
@@ -1,0 +1,11 @@
+package com.itechart.citydistance.service;
+
+import com.itechart.citydistance.generated.model.Route;
+
+import java.util.List;
+
+public interface RouteService {
+
+    List<Route> getRoutes(String from, String to);
+
+}
